name:                mockker
version:             0.1.0
synopsis:            mock server for api testing.
license:             MIT
license-file:        LICENSE
author:              philopon
maintainer:          philopon.dependence@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable mockker
  main-is:             main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base             >= 4.7   && <4.8
                     , apiary           >= 1.2.2 && <1.3
                     , wai              >= 3.0   && <3.1
                     , warp             >= 3.0   && <3.1
                     , containers       >= 0.5   && <0.6
                     , text             >= 1.2   && <1.3
                     , bytestring       >= 0.10  && <0.11
                     , case-insensitive >= 1.2   && <1.3
                     , hastache         >= 0.6   && <0.7
                     , file-embed       >= 0.0   && <0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
